--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@
 Flask==3.0.3
 Flask-Cors==4.0.0
 SQLAlchemy==2.0.36
-psycopg[binary]==3.2.1
+psycopg2>=2.9.3
 
 # Utilidades
 python-dotenv==1.0.1
@@ -12,4 +12,3 @@ requests==2.32.3
 # Seguridad de contraseñas (ya la usa werkzeug dentro de Flask)
 Werkzeug==3.0.4
 
-psycopg2-binary
