Actualizar DATABASE_URL con la URL de Render

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://alumnodb:alumnodb@host.docker.internal:5432/juegosdb
+DATABASE_URL=postgres://alumnodb:alumnodb@juegosdb:5432/juegosdb
 CORS_ORIGINS=http://localhost:5173
 SECRET_KEY=dev-secret-please-change
 SESSION_COOKIE_SAMESITE=Lax
