--- a/frontend-axios-api/.env.development
+++ b/frontend-axios-api/.env.development
@@ -1,2 +1,2 @@
-VITE_API_BASE=http://localhost:5000/api
-VITE_API_URL=http://localhost:5000/api
+VITE_API_BASE=https://prcompu-portal-juegos-backend.onrender.com/api
+VITE_API_KEY=dev-123
